# regolo-claude

./: .gitignore  AGENTS.md  Cargo.toml  Makefile  ONBOARDING.md  README.md  install.sh  regolo  requirements.txt  router_server.py  router_server.rs  skills-lock.json
.github/workflows/: ci.yml  release.yml
docs/: index.html
src/: main.rs
