[package]
name = "regolo"
version = "0.1.1"
edition = "2021"

[[bin]]
name = "regolo"
path = "src/main.rs"

[dependencies]
actix-web = "4"
clap = { version = "4", features = ["derive"] }
dirs = "5"
reqwest = { version = "0.11", features = ["json"] }
rpassword = "7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt", "rt-multi-thread"] }
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
